# Modern_Cpp

./: .gitignore
Code/: Makefile
Code/Basic_Syntax/: a.out  functions  functions.cpp  hello_world  hello_world.cpp  indexing_tuple  indexing_tuple.cpp
Code/Data_Structures/: a.out  array.cpp  sets  sets.cpp  string  string.cpp  vecors  vecors.cpp
Code/apps/calculator/src/: 01_calculator.cpp
Code/apps/guessing_game/: Makefile
Code/apps/guessing_game/src/: main.cpp
Code/src/: 02_fib.cpp
Course/: 1_intro.md  2_basics.md  3_data_structures.md  4_oop.md  course.yaml
DataAnalysisTool/: CMakeLists.txt
DataAnalysisTool/data/: sample_data.csv
DataAnalysisTool/include/: csvreader.h  dataops.h
DataAnalysisTool/src/: csvreader.cpp  dataops.cpp  main.cpp
HackerRank/Classes/: box_it.cpp  classes.cpp  classes_objects.cpp
HackerRank/STL/: deque.cpp  deque_but_not_deque.cpp  lower_bound  lower_bound_cpp  lower_bound_cpp.cpp  lower_bound_stl  lower_bound_stl.cpp  map  map.cpp  pretty_print.cpp  sets  sets.cpp  vector_erase  vector_erase.cpp
LibraryManagementSystem/: .clang-format  CMakeLists.txt  command.txt
LibraryManagementSystem/data/: authors.csv  books.csv  patrons.csv
LibraryManagementSystem/include/: author.h  book.h  library.h  patron.h
LibraryManagementSystem/src/: author.cpp  book.cpp  library.cpp  main.cpp  main_prev.cpp  patron.cpp
LibraryManagementSystem/tests/: book_tests.cpp
